# project1

./: example.py  pyproject.toml
.github/workflows/: pylint.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
