[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parser"
authors = [{name = "Catherine Kuhn", email = "catherine.kuhn@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    'io', 'typing'
]
[project.urls]
Home = "https://github.com/catherinekuhn17"
